# discord-credit-bot

./: .gitignore  Dockerfile  Makefile  README.md  clean_docker.sh  docker-compose.yaml  pyproject.toml
env/: example.env
src/: main.py  util.py
src/dao/: models.py
tests/: test_function.py
