[project]
name = "discord-credit-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "a-shmyg",email = "annashmyg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "discord_credit_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
